Added class ids to specs service definition
